kubernetes/pod-cli.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: webapp
  name: webapp
spec:
  containers:
  - image: test
    name: webapp
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
