kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  ingressClassName: "nginx"
  rules:
    - host: web13.go4clouds.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: webapp
                port:
                  number: 8081
  tls:
    - hosts:
      - web13.go4clouds.net
      secretName: web13-go4clouds-net-tls
